--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -70,25 +70,25 @@ ul li {
 }
 /* Neu hinzugefügte CSS-Regel für die Boxen der Icons */
 .icon-box {
-    background-color: #fff; /* Hintergrundfarbe */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Leichter Schatten */
-    border-radius: 10px; /* Abgerundete Ecken */
-    padding: 20px; /* Innenabstand */
-    margin-right: 20px; /* Rechter Außenabstand zwischen den Boxen */
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    margin-right: 20px;
 }
 
 
 .icon-box {
-    background-color: #fff; /* Hintergrundfarbe */
-    border-radius: 8px; /* Abgerundete Ecken */
-    padding: 20px; /* Innenabstand */
-    margin-right: 20px; /* Rechter Außenabstand zwischen den Boxen */
-    transition: box-shadow 0.6s ease; /* Übergangseffekt für den Schatten */
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    margin-right: 20px;
+    transition: box-shadow 0.6s ease;
 }
 
 /* CSS-Regel für den Schatteneffekt beim Hover */
 .icon-box:hover {
-    box-shadow: 0 4px 8px rgb(220, 112, 25); /* Animierter Schatten beim Hover */
+    box-shadow: 0 4px 8px rgb(220, 112, 25);
 }
 
 
@@ -102,11 +102,9 @@ ul li {
 
 
 .max-width-img {
-    max-width: 100%; /* Setzt maximale Breite auf 100% */
-    height: auto; /* Behält das Seitenverhältnis bei */
+    max-width: 100%;
+    height: auto;
 }
-
-
 
 
 /* CSS für die Animation */
@@ -148,10 +146,10 @@ ul li {
 
 .warum-all {
     position: relative;
-    width: 100%; /* Breite anpassen */
-    height: 500px; /* Höhe anpassen */
+    width: 100%; /
+    height: 500px;
     overflow: hidden;
-    margin-top: 50px; /* Abstand zum vorherigen Element */
+    margin-top: 50px;
 }
 
 .warum-text {
@@ -173,7 +171,7 @@ ul li {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../img/photo1.jpg'); /* Pfad zu deinem Bild */
+    background-image: url('../img/photo1.jpg');
     background-size: cover;
     background-position: center;
     transition: opacity 0.5s ease;
@@ -210,7 +208,7 @@ ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50vh; /* Setzen der Höhe auf die volle Bildschirmhöhe */
+    height: 50vh;
 }
 
 .animation-gif {
@@ -227,3 +225,44 @@ ul li {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+/*LOGIN*/
+.logincontainer{
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+    padding: 50px;
+    color: #d7cece;
+
+}
+
+
+
+
+/*Registrieren*/
+
+.gradient-custom-5 {
+    /* fallback for old browsers */
+    background: #e0af87;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgb(96, 10, 121), rgb(199, 97, 15));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgb(222, 180, 147), rgb(150, 126, 126))
+}
+.gradient-custom-5 {
+    /* fallback for old browsers */
+    background: #f8f3f3;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgb(224, 173, 146), rgb(141, 146, 208));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgb(220, 112, 25), rgb(136, 134, 134))
+}
+
+
+
+
