--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -290,3 +290,20 @@ ul li {
     margin-bottom: 0;
     margin-top: 0;
 }
+
+/*Hilfeseite*/
+body {
+    margin:20px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    padding:20px;
+    padding-bottom:60px;
+    margin-top:40px;
+    align-content:center;
+    text-align:center;
+    flex:1;
+}
