--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -291,8 +291,11 @@ ul li {
     margin-top: 0;
 }
 
+
+
+
 /*Hilfeseite*/
-body {
+.hilfebody {
     margin:20px;
     display: flex;
     flex-direction: column;
@@ -300,8 +303,7 @@ body {
 }
 
 main {
-    padding:20px;
-    padding-bottom:60px;
+    padding: 20px 20px 60px;
     margin-top:40px;
     align-content:center;
     text-align:center;
