Login; Registrierung; Datenbank; Usertypen
implementierung Datenbank, Registrierung, Login (Profilseite fehlt noch)

--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -146,7 +146,7 @@ ul li {
 
 .warum-all {
     position: relative;
-    width: 100%; /
+    width: 100%; 
     height: 500px;
     overflow: hidden;
     margin-top: 50px;
