--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -334,3 +334,35 @@ main {
 .profile-info span {
     color: #555;
 }
+
+.buttonbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    margin: 0;
+    background-color: #f6e5d8;
+}
+
+.button {
+    display: inline-block;
+    margin: 20px;
+    padding: 40px 60px;
+    min-width: 400px;
+    height: 50px;
+    font-size: 30px;
+    text-decoration: none;
+    color: white;
+    background-color: orange;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-align: center;
+    line-height: 5px;
+    box-sizing: border-box;
+}
+
+.button:hover {
+    background-color: gray;
+}
