--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -333,10 +333,11 @@ main {
 }
 
 .profile-info span {
-    color: #555;
-=======
+    color: #555;}
+
+
 /*Ab hier mein Profil*/
-profilbody {
+.profilbody {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f7f7f7;
     margin: 0;
@@ -363,14 +364,13 @@ profilbody {
     margin-bottom: 15px;
 }
 
-label {
+.label {
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
 }
 
-input,
-select {
+.input, .select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -429,5 +429,5 @@ select {
 }
 
 .button:hover {
-    background-color: gray;
-}
+    background-color: rgb(128, 128, 128);}
+
