--- a/src/root/admin/admin.css
+++ b/src/root/admin/admin.css
@@ -52,14 +52,14 @@
   }
 
 
-
+/*
 .img-responsive{
     object-fit: cover; 
 	width: 100%; 
 	height: 100%;
     position:sticky;
-
 }
+*/
 
   .sidebar a {
     display: block;
