--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -19,7 +19,7 @@ footer .cizgi { border-right: 1px solid #71777e; }
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white; /* Textfarbe */
+    color: white;
     text-align: center;
     margin: 18px;
     padding: 10px;
@@ -258,6 +258,12 @@ ul li {
 }
 
 
+@media (max-width: 576px) {
+    .button {
+        padding: 5px 10px; /* Reduziertes Padding */
+        font-size: 14px; /* Reduziertes Schriftgröße */
+    }
+}
 
 
 
@@ -409,9 +415,9 @@ main {
 }
 
 .button {
-    display: inline-block;
+    display: inline-flex;
     margin: 20px;
-    padding: 40px 60px;
+    padding: 10px 20px;
     min-width: 400px;
     height: 50px;
     font-size: 30px;
