--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -273,16 +273,6 @@ ul li {
     margin: auto;
 }
 
-/*
-.impressum-container{
-    color: #110c07;
-    margin-top: 30px;
-    padding: 50px 15px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-*/
-
 .center {
     text-align: center;
 }
@@ -314,11 +304,17 @@ main {
 
 
 .profile-container {
-     width: 100%;
-     padding: 20px;
-     background: #967e7e;
-     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    width: 100%;
+    padding: 20px;
+    background: #967e7e;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
  }
+
 
 .profile-container h1 {
     text-align: center; /* Zentriert nur den Titel "Profil" */
@@ -345,15 +341,6 @@ main {
     padding: 20px;
 }
 
-/*
-.profilecontainer {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 700px;
-    margin: auto;
-}*/
 
 .profile-header {
     font-size: 24px;
@@ -365,15 +352,6 @@ main {
 .form-group {
     margin-bottom: 15px;
 }
-
-/*
-.label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 5px;
-}
-
- */
 
 .input, .select {
     width: 100%;
