--- a/src/root/css/style.css
+++ b/src/root/css/style.css
@@ -382,33 +382,39 @@ main {
 .save-button:hover {
     background-color: #005f73;
 }
-
 .buttonbox {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 60vh;
-    margin: 0;
-    background-color: #f6e5d8;
+    margin-top: 20px;
 }
 
 .button {
-    display: inline-flex;
-    margin: 20px;
+    display: inline-block;
     padding: 10px 20px;
-    min-width: 400px;
-    height: 50px;
-    font-size: 30px;
-    text-decoration: none;
+    font-size: 18px;
     color: white;
-    background-color: orange;
+    background-color: #dc7019;
     border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    text-align: center;
-    line-height: 5px;
-    box-sizing: border-box;
+    border-radius: 4px;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: background-color 0.3s ease;
+}
+
+
+
+@media (max-width: 768px) {
+    .button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+    .buttonbox {
+        flex-direction: column;
+        align-items: center;
+    }
+    .button {
+        margin: 5px 0;
+    }
 }
 
 .button:hover {
